New files added - [] Files modified - [MyProfile.html,UserCreation.html,ManageMunicipalities.variables.json,servicedef.xml] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/MyProfile/MyProfile.html
+++ b/src/main/webapp/pages/MyProfile/MyProfile.html
@@ -112,6 +112,7 @@
                                                 <wm-text name="textRePwd" on-keyup="textRePwdKeyup($event, $scope)" regexp="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[$@$!%*?&amp;])[A-Za-z\d$@$!%*?&amp;]{8,}" required="true" type="password"></wm-text>
                                             </wm-container>
                                         </wm-composite>
+                                        <wm-label padding="unset 0.5em" name="label17" caption="PASSWORD REQUIREMENTS.  All passwords must contain a minimum of 8 characters.  You must use a minimum of 1 letter, 1 number and one special symbol"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
