--- a/src/main/webapp/pages/UserCreation/UserCreation.html
+++ b/src/main/webapp/pages/UserCreation/UserCreation.html
@@ -68,7 +68,7 @@
                                     <wm-container class="col-md-9" name="container5" width="80%">
                                         <wm-search name="textSearchMunicipalities" placeholder="Start Typing" dataset="bind:Variables.GetMunicipalities.dataSet" searchkey="municipalityName" displaylabel="municipalityName" displayimagesrc="logo" datafield="All Fields"
                                         on-submit="textSearchMunicipalitiesSubmit($event, $scope)" required="true" width="100%"></wm-search>
-                                        <wm-label padding="unset 0.5em" name="Instructions" caption="To submit forms and interact with a municipality, search for a participating municipality and click “Add Municipality”.  You may manage these municipalities under your My Profile as well."
+                                        <wm-label padding="unset 0.5em" name="Instructions" caption="To get started, you will need to select at least 1 municipality that you would like to do business with.  You may add as many municipalities as you like by simply searching and clicking “Add Municipality”."
                                         horizontalalign="center" fontweight="bold" textalign="left"></wm-label>
                                     </wm-container>
                                 </wm-composite>
