New files added - [] Files modified - [ManageForms.js,ManageForms.html,EditForm.html,DataEntry.html,DataEntry.js] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/DataEntry/DataEntry.html
+++ b/src/main/webapp/pages/DataEntry/DataEntry.html
@@ -105,8 +105,8 @@
                             <wm-grid-column binding="postalCode" caption="Postal Code" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                             <wm-grid-column binding="phone" caption="Phone" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                             <wm-grid-column binding="email" caption="Email" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                            <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
-                            <wm-grid-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
+                            <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
+                            <wm-grid-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="addNewRow();addNewRowAction($event)" shortcutkey="" disabled="false"></wm-grid-action>
                             <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="editRow()" disabled="false"></wm-grid-row-action>
                             <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
                         </wm-grid>
@@ -118,8 +118,8 @@
                                         mobile-display="true" widget="text"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="6" name="gridcolumn16">
-                                        <wm-form-field name="municipalityGuid" displayname="Municipality Guid" required="false" show="true" generator="assigned" primary-key="false" key="municipalityGuid" type="string" is-related="false" maxchars="255" pc-display="true"
-                                        mobile-display="true" widget="text"></wm-form-field>
+                                        <wm-form-field name="municipalityGuid" displayname="Municipality Guid" required="false" show="false" generator="assigned" primary-key="false" key="municipalityGuid" type="string" is-related="false" maxchars="255" pc-display="true"
+                                        mobile-display="true" widget="text" defaultvalue="bind:GUID"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow9">
