New files added - [project-rest-service.xml,pages-config.json,README.md,prefabPropertiesMetadata.json,page.min.html,Main.js,app.css,.wmproject.properties,prefabProperties.properties,Google_reCAPTCHA-prefab-services.xml,config.json,Readme.txt,prefab-dispatcher-servlet.xml,types.js,default-image.png,ReCaptcha.spring.xml,index.html,prefab-icon.png,spinner-small.gif,Readme.txt,Google_reCAPTCHA.jar,Main.variables.json,wmProperties.js,Main.css,favicon.ico,Readme.txt,README.md,Readme.txt,Main.html,.wmproject.properties,app.variables.json,log4j.properties,Readme.txt,en.json,ReCaptcha-service-definitions.json,app.js,Readme.txt] Files modified - [UserCreation.js,UserCreation.html,ManageGISData.js,ManageGISData.html,UserCreation.variables.json,intercept-urls.json,project-security-provider.xml] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/UserCreation/UserCreation.html
+++ b/src/main/webapp/pages/UserCreation/UserCreation.html
@@ -161,6 +161,11 @@
                                 <wm-label padding="unset 0.5em" name="label7" caption="PASSWORD REQUIREMENTS.  All passwords must contain a minimum of 8 characters.  You must use a minimum of 1 letter, 1 number and one special symbol"></wm-label>
                             </wm-gridcolumn>
                         </wm-gridrow>
+                        <wm-gridrow name="gridrow19">
+                            <wm-gridcolumn columnwidth="12" name="gridcolumn29_1">
+                                <wm-prefab prefabname="Google_reCAPTCHA" name="Google_reCAPTCHA1"></wm-prefab>
+                            </wm-gridcolumn>
+                        </wm-gridrow>
                     </wm-layoutgrid>
                 </wm-wizardstep>
             </wm-wizard>
